--- a/BLT/BLT-Main-Emprestimos/BLT-Java-Emprestimos/nbproject/project.properties
+++ b/BLT/BLT-Main-Emprestimos/BLT-Java-Emprestimos/nbproject/project.properties
@@ -33,7 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.BLT-Java-Emprestimos-src=src
-file.reference.mysql-connector-java-5.1.44-bin.jar=F:\\BLT-Java-Disciplinas\\mysql-connector-java-5.1.44-bin.jar
+file.reference.mysql-connector-java-5.1.44-bin.jar=mysql-connector-java-5.1.44-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
